@@ -150,10 +150,7 @@ ENDIF ()
 SET(WebKit_LINK_FLAGS ${BLACKBERRY_LINK_FLAGS})
 
 LIST(APPEND WebKit_LIBRARIES
-    ${AOI_LIBRARY}
-    ${CLIPBOARD_LIBRARY}
     ${CURL_LIBRARY}
-    ${Crypto_LIBRARY}
     ${FONTCONFIG_LIBRARY}
     ${FREETYPE_LIBRARY}
     ${HARFBUZZ_LIBRARY}
@@ -161,23 +158,15 @@ LIST(APPEND WebKit_LIBRARIES
     ${ICUI18N_LIBRARY}
     ${ICUUC_LIBRARY}
     ${INTL_LIBRARY}
-    ${Iconv_LIBRARY}
     ${JPEG_LIBRARY}
     ${JavaScriptCore_LIBRARY_NAME}
-    ${MD_LIBRARY}
     ${MMR_LIBRARY}
     ${M_LIBRARY}
-    ${NBUTIL_LIBRARY}
     ${OTS_LIBRARY}
     ${PNG_LIBRARY}
-    ${PPSCache_LIBRARY}
     ${SQLITE3_LIBRARY}
-    ${SSL_LIBRARY}
-    ${STRM_LIBRARY}
-    ${Screen_LIBRARY}
     ${Skia_LIBRARY}
     ${Skia_QNX_LIBRARY}
-    ${Socket_LIBRARY}
     ${UUID_LIBRARY}
     ${WebKitPlatform_LIBRARY}
     ${XML2_LIBRARY}
