@@ -67,29 +67,20 @@ FIND_STAGING_LIBRARY(XML2_LIBRARY xml2)
 FIND_STAGING_LIBRARY(XSLT_LIBRARY xslt)
 FIND_STAGING_LIBRARY(SQLITE3_LIBRARY sqlite3)
 FIND_STAGING_LIBRARY(M_LIBRARY m)
-FIND_STAGING_LIBRARY(NBUTIL_LIBRARY nbutil)
 FIND_STAGING_LIBRARY(FREETYPE_LIBRARY freetype)
 FIND_STAGING_LIBRARY(ICUData_LIBRARY icudata)
 FIND_STAGING_LIBRARY(ICUI18N_LIBRARY icui18n)
 FIND_STAGING_LIBRARY(ICUUC_LIBRARY icuuc)
-FIND_STAGING_LIBRARY(Iconv_LIBRARY iconv)
 FIND_STAGING_LIBRARY(INTL_LIBRARY intl)
 FIND_STAGING_LIBRARY(Z_LIBRARY z)
-FIND_STAGING_LIBRARY(Socket_LIBRARY socket)
 FIND_STAGING_LIBRARY(CURL_LIBRARY curl)
-FIND_STAGING_LIBRARY(SSL_LIBRARY ssl)
-FIND_STAGING_LIBRARY(Crypto_LIBRARY crypto)
 FIND_STAGING_LIBRARY(WebKitPlatform_LIBRARY webkitplatform)
 FIND_STAGING_LIBRARY(UUID_LIBRARY uuid-browser)
-FIND_STAGING_LIBRARY(Screen_LIBRARY screen)
 FIND_STAGING_LIBRARY(MMR_LIBRARY mmrndclient)
 FIND_STAGING_LIBRARY(PPSCache_LIBRARY ppscache)
 FIND_STAGING_LIBRARY(MD_LIBRARY md)
-FIND_STAGING_LIBRARY(AOI_LIBRARY aoi)
-FIND_STAGING_LIBRARY(CLIPBOARD_LIBRARY clipboard)
 FIND_STAGING_LIBRARY(EGL_LIBRARY EGL)
 FIND_STAGING_LIBRARY(GLESv2_LIBRARY GLESv2)
-FIND_STAGING_LIBRARY(STRM_LIBRARY strm)
 FIND_STAGING_LIBRARY(HARFBUZZ_LIBRARY harfbuzz)
 FIND_STAGING_LIBRARY(FONTCONFIG_LIBRARY fontconfig)
 FIND_STAGING_LIBRARY(PROFILING_LIBRARY profilingS)
