@@ -1,3 +1,14 @@
+2012-08-17  Rob Buis  <rbuis@rim.com>
+
+        [BlackBerry] Remove some shared libraries from linking
+        https://bugs.webkit.org/show_bug.cgi?id=94253
+
+        Reviewed by Yong Li.
+
+        Remove some shared libraries.
+
+        * Source/cmake/OptionsBlackBerry.cmake:
+
 2012-08-16  Gustavo Noronha Silva  <gns@gnome.org>
 
         Unreviewed speculative 32 bits build fix.
